<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_text" />
        <EditText
            android:id="@+id/dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:editable="false"
            android:onClick="showDatePickerDialog"
            android:hint="@string/date_hint"/>
        <LinearLayout
            android:id="@+id/video_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dates">

            <TextView android:id="@+id/video_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/video_name" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_pick"
                android:onClick="pickVideo" />
        </LinearLayout>
        <Button
            android:id="@+id/video_upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/video_picker"
            android:text="@string/button_upload"
            android:onClick="uploadVideo" />
        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/video_upload_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/colorPrimary"
            android:layout_below="@id/video_upload_button"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>


